<resources>
    <string name="app_name">SchedBin</string>
    <string name="todo">TODO</string>
    <string name="background_design1">background design 1</string>
    <string name="background_design2">background design 2</string>
    <string name="background_design3">background design 3</string>
    <string name="sign_in_to_">Sign in\n to \nSchedBin</string>

    <string name="googleBtn">Continue with Google</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="reset_passw">Reset Password</string>
    <string name="no_account">Don\'t hava an Account?</string>
    <string name="create_one">Create one</string>
    <string name="title_activity_2">Activity2</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="backbtn">This is back button</string>
    <string name="create_your">CREATE YOUR ACCOUNT</string>
    <string name="createAccnt_Name">Name</string>
    <string name="createAccnt_address">Address</string>
    <string name="number_optional"> Number (optional)</string>
    <string name="houseName_input"> House Name (optional)</string>
    <string name="save">Save</string>
    <string name="info_houseName">This will serve as your house Name tag</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_">Enter your email, \nand you’ll receive a link to change your password </string>
    <string name="new_link_resetpass">The link has been sent to this email \n- \n</string>
    <string name="view_schedule">View Schedule</string>
    <string name="schedule">Schedule</string>
    <string name="Settings">Settings</string>
    <string name="add_sched_btn_plus">"plus button for adding schedule "</string>
    <string name="calendar">Calendar</string>
    <string name="schedule_of">schedule for this month</string>
    <string name="no_schedule">No Schedule</string>
    <string name="schedules_for_this_month">Schedules</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="schedule_add">Schedule \nyour\n collection</string>
    <string name="time">Enter Time (00:00)</string>
    <string name="set_time">set time</string>
    <string name="enter_a_time">Enter a time</string>
    <string name="enter_an_address">Enter an address</string>
    <string name="garbageType">Type of Garbage</string>
    <string name="edit_schedule">Edit Schedule</string>
    <string name="logout">Logout</string>
    <string name="enter_date">Enter Date (mm/dd/yyyy)</string>
    <string name="delete_scheduleBtn">Delete Schedule</string>
    <string name="garbage_type">Garbage Type</string>
    <string name="startTime">Start Time</string>
    <string name="endTime">End Time</string>
    <string name="address_tr">Address</string>
    <string name="add_admin">Apply for Administrator</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_update">Update</string>
    <string name="date">Date</string>
    <string name="date_header">Date (mm/dd/yyyy)</string>
    <string name="row_updated_successfully">Row updated successfully</string>
    <string name="editText">Select Time</string>

    <string-array name="garbageTypes">
        <item>Biodegradable</item>
        <item>Non-Biodegradable</item>
        <item>Recyclable</item>
        <item>Hazardous</item>
    </string-array>

    <string-array name="doesNotRepeat_array">
        <item>Does not Repeat</item>
        <item>Everyday</item>
        <item>Every week</item>
        <item>Every month</item>
        <item>Every Year</item>
    </string-array>

    <string-array name="features">
        <item>Address</item>
        <item>Calendar Display</item>
        <item>Color Optimization</item>
        <item>Displayed Schedules</item>
        <item>Font Size Adjustment</item>
        <item>Garbage Type</item>
        <item>Internet Connectivity</item>
        <item>Layout Readability</item>
        <item>Night Mode</item>
        <item>Table Optimization</item>
        <item>User Navigation</item>
        <item>Others</item>
    </string-array>



</resources>