<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    tools:context=".resetPassword_Activity">

  <TextView
      android:id="@+id/reset_passw"
      android:layout_width="278dp"
      android:layout_height="38dp"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"
      android:fontFamily="@font/montserrat_bold"
      android:gravity="center_horizontal|top"
      android:text="@string/reset_passw"
      android:textAppearance="@style/reset_passw"
      android:textColor="@color/color3_btns"
      android:textSize="29sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      tools:layout_editor_absoluteY="101dp" />

  <TextView
      android:id="@+id/enter_your_"
      android:layout_width="193dp"
      android:layout_height="59dp"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"
      android:gravity="center_horizontal|top"
      android:text="@string/enter_your_"
      android:textAppearance="@style/enter_your_email"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      tools:layout_editor_absoluteY="138dp" />

  <Button
      android:id="@+id/backBtn2"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:background="@drawable/btn_back_bg"
      android:contentDescription="@string/backbtn"
      android:drawableEnd="@drawable/ic_backbtn"
      android:drawableTint="@color/color3_btns"
      android:paddingEnd="10dp"
      tools:layout_editor_absoluteX="16dp"
      tools:layout_editor_absoluteY="16dp" />

  <!--  <com.google.android.material.textfield.TextInputLayout-->
  <!--      android:id="@+id/resetEmail_input"-->
  <!--      android:layout_width="296dp"-->
  <!--      android:layout_height="56dp"-->
  <!--      tools:layout_editor_absoluteX="58dp"-->
  <!--      tools:layout_editor_absoluteY="320dp">-->

  <!--    <com.google.android.material.textfield.TextInputEditText-->
  <!--        android:layout_width="match_parent"-->
  <!--        android:layout_height="wrap_content"-->
  <!--        android:hint="Email" />-->
  <!--  </com.google.android.material.textfield.TextInputLayout>-->

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/resetEmail_input"
      android:layout_width="305dp"
      android:layout_height="63dp"
      android:background="@drawable/input_bg"
      android:orientation="vertical"
      android:paddingStart="5dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      tools:layout_editor_absoluteY="494dp">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:backgroundTint="@android:color/transparent"
        android:gravity="center_vertical"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textAppearance="@style/emailText"
        tools:ignore="TouchTargetSizeCheck" />
  </com.google.android.material.textfield.TextInputLayout>

  <Button
      android:id="@+id/resetPassword_btn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@drawable/login_btn"
      android:fontFamily="@font/montserrat_bold"
      android:text="@string/reset_password"
      android:textAppearance="@style/log_in"
      tools:layout_editor_absoluteX="69dp"
      tools:layout_editor_absoluteY="604dp" />

  <ImageView
      android:id="@+id/reset_password_img"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.494"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.466"
      app:srcCompat="@drawable/bg_forgotpass" />


</androidx.constraintlayout.widget.ConstraintLayout>