<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main_color"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp"
    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/bg_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/background_design2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.453"
        app:srcCompat="@drawable/ellipse6" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="288dp"
        android:layout_height="46dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center_horizontal|top"
        android:text="@string/sign_in_to_"
        android:textColor="@color/color3_btns"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.124" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="84dp"
        android:layout_height="85dp"
        android:layout_marginBottom="20dp"
        android:rotation="150"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/bg2" />

    <!--End of background design -->

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="287dp"
        android:layout_height="119dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/continueWithGoogleBtn"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/continueWithGoogleBtn"
        app:layout_constraintTop_toTopOf="@+id/text1"
        app:layout_constraintVertical_bias="0.049"
        app:srcCompat="@drawable/image2" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="265dp"
        android:layout_height="50dp"
        android:background="@drawable/login_btn"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:lineHeight="24sp"
        android:text="@string/login"
        android:textAppearance="@style/log_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.799" />

    <Button
        android:id="@+id/continueWithGoogleBtn"
        style="@style/GoogleButton"
        android:layout_width="301dp"
        android:layout_height="58dp"
        android:background="@color/white"
        android:drawableStart="@drawable/google_icon"
        android:drawablePadding="15dp"
        android:fontFamily="sans-serif"
        android:foregroundGravity="center"
        android:gravity="center_vertical|start"
        android:paddingStart="13dp"
        android:singleLine="true"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/orTxt"
        app:layout_constraintEnd_toEndOf="@+id/login_btn"
        app:layout_constraintStart_toStartOf="@+id/login_btn"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.388" />

    <TextView
        android:id="@+id/orTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/or"
        android:textAppearance="@style/or"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.213" />


    <!--    for the input email-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInput_login"
        android:layout_width="305dp"
        android:layout_height="63dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/input_bg"
        android:orientation="vertical"
        android:paddingStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orTxt">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.5"
            android:backgroundTint="@android:color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textAppearance="@style/emailText"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--    for the input password-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInput_login"
        android:layout_width="308dp"
        android:layout_height="65dp"
        android:background="@drawable/input_bg"
        android:paddingStart="5dp"
        app:layout_constraintBottom_toTopOf="@+id/login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInput_login"
        app:layout_constraintVertical_bias="0.169">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.5"
            android:backgroundTint="@android:color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textAppearance="@style/emailText"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/reset_btn"
        android:layout_width="146dp"
        android:layout_height="42dp"
        android:background="@color/transparent"
        android:text="@string/reset_passw"
        android:textAppearance="@style/no_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/no_account"
        android:layout_width="103dp"
        android:layout_height="33dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center_horizontal|center"
        android:text="@string/no_account"
        android:textAppearance="@style/no_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/create_accnt_Btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_btn" />

    <Button
        android:id="@+id/create_accnt_Btn"
        android:layout_width="100dp"
        android:layout_height="33dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/create_one"
        android:textAppearance="@style/create_one"
        app:layout_constraintBottom_toBottomOf="@+id/no_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/no_account"
        app:layout_constraintTop_toTopOf="@+id/no_account"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>