<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    tools:context=".ScheduleFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Group
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="calendar,schedule_of" />

        <CalendarView
            android:id="@+id/Admin_calendarView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="116dp"
            android:background="@drawable/bg_calendar1"
            app:layout_constraintStart_toStartOf="@+id/schedule_of"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/calendar"
            android:layout_width="147dp"
            android:layout_height="25dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="top"
            android:text="@string/calendar"
            android:textAppearance="@style/calendar"
            app:layout_constraintBottom_toTopOf="@+id/schedule_of"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="31dp" />

        <TextView
            android:id="@+id/schedule_of"
            android:layout_width="256dp"
            android:layout_height="18dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="top"
            android:text="@string/schedule_of"
            android:textAppearance="@style/schedule_of"
            app:layout_constraintBottom_toTopOf="@+id/Admin_calendarView"
            app:layout_constraintStart_toStartOf="@+id/calendar" />

        <Button
            android:id="@+id/button"
            android:layout_width="269dp"
            android:layout_height="48dp"
            android:background="@drawable/bg_viewsched"
            android:drawableEnd="@drawable/ic_dropdown"
            android:paddingStart="10dp"
            android:text="@string/no_schedule"
            android:textAlignment="textStart"
            android:textAppearance="@style/dropDown_noSched"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.044" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>