<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    tools:context=".ActivityHomeRegularUser">


    <nl.dionsegijn.konfetti.xml.KonfettiView
        android:id="@+id/konfettiView"
        android:layout_width="411dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/DropDown_spinner_for_location"
        android:layout_width="325dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_viewsched"
        android:drawableEnd="@drawable/ic_dropdown"
        android:paddingStart="10dp"
        android:text="@string/no_schedule"
        android:textAlignment="textStart"
        android:textAppearance="@style/dropDown_noSched"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text1" />

    <TextView
        android:id="@+id/calendar"
        android:layout_width="113dp"
        android:layout_height="29dp"
        android:gravity="top"
        android:text="@string/calendar"
        android:textAppearance="@style/calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DropDown_spinner_for_location"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/schedule_of"
        android:layout_width="192dp"
        android:layout_height="19dp"
        android:text="schedule for this month"
        android:textAlignment="center"
        android:textAppearance="@style/schedule_of"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendar" />

    <com.prolificinteractive.materialcalendarview.MaterialCalendarView
        android:id="@+id/Admin_calendarView"
        android:layout_width="339dp"
        android:layout_height="303dp"
        android:background="@drawable/bg_calendar1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/schedule_of">

    </com.prolificinteractive.materialcalendarview.MaterialCalendarView>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="337dp"
        android:layout_height="163dp"
        android:layout_marginTop="21dp"
        app:layout_constraintBottom_toTopOf="@+id/backBtn2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Admin_calendarView">

        <TableLayout
            android:id="@+id/schedule_tableLayout"
            android:layout_width="323dp"
            android:layout_height="150dp"
            android:layout_marginBottom="14dp"
            android:background="#56084C41"
            app:layout_constraintBottom_toTopOf="@+id/add_schedule"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Title_ScheduleforthisMonth"
            app:layout_constraintVertical_bias="0.0">

            <!-- Header row -->

            <!-- Data rows (wrapped in a ScrollView) -->
            <TableRow
                android:id="@+id/schedule_th"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#785028">

                <TextView
                    android:id="@+id/tr_date"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:gravity="center|left"
                    android:text="@string/date_header"
                    android:textAllCaps="false"
                    android:textAppearance="@style/Headers" />

                <TextView
                    android:id="@+id/tr_garbageType"
                    android:layout_width="191dp"
                    android:layout_height="25dp"
                    android:paddingStart="15dp"
                    android:text="@string/garbage_type"
                    android:textAllCaps="false"
                    android:textAppearance="@style/Headers" />

                <TextView
                    android:id="@+id/tr_startTime"
                    android:layout_width="138dp"
                    android:layout_height="25dp"
                    android:text="@string/startTime"
                    android:textAppearance="@style/Headers" />

                <TextView
                    android:id="@+id/tr_endTime"
                    android:layout_width="163dp"
                    android:layout_height="25dp"
                    android:text="@string/endTime"
                    android:textAppearance="@style/Headers" />

            </TableRow>

            <ScrollView
                android:layout_width="296dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/schedule_tableLayout"
                app:layout_constraintStart_toStartOf="@+id/schedule_tableLayout"
                app:layout_constraintTop_toBottomOf="@+id/schedule_th">

                <TableLayout
                    android:id="@+id/data_table_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:textAlignment="textStart"
                    tools:ignore="TouchTargetSizeCheck">

                    <TableRow
                        android:id="@+id/schedule_td"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/tr_date2"
                            android:layout_width="156dp"
                            android:layout_height="match_parent"
                            android:text=""
                            android:textAlignment="textStart" />

                        <TextView
                            android:id="@+id/tr_garbageType2"
                            android:layout_width="191dp"
                            android:layout_height="match_parent"
                            android:text=""
                            android:textAlignment="textStart" />

                        <TextView
                            android:id="@+id/tr_startTime2"
                            android:layout_width="137dp"
                            android:layout_height="match_parent"
                            android:text=""
                            android:textAlignment="textStart" />

                        <TextView
                            android:id="@+id/tr_endTime2"
                            android:layout_width="163dp"
                            android:layout_height="match_parent"
                            android:text=""
                            android:textAlignment="textStart" />
                    </TableRow>
                </TableLayout>
            </ScrollView>
        </TableLayout>
    </HorizontalScrollView>

    <Button
        android:id="@+id/backBtn2"
        android:layout_width="57dp"
        android:layout_height="60dp"
        android:layout_marginStart="200dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/dark_brown"
        android:contentDescription="@string/backbtn"
        android:drawableEnd="@drawable/ic_exit"
        android:drawableTint="@color/color2"
        android:gravity="center"
        android:includeFontPadding="false"
        android:paddingEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/FeedbackBtn"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50sp"
        android:layout_height="50sp"
        app:layout_constraintEnd_toStartOf="@+id/text1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/sched_bin_round"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="13dp" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="295dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/montserrat_bold"
        android:text="Welcome SchedBin"
        android:textColor="@color/dark_brown"
        android:textSize="40sp"
        app:autoSizeMaxTextSize="40sp"
        app:autoSizeMinTextSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.25" />

    <Button
        android:id="@+id/FeedbackBtn"
        android:layout_width="57dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/color3_btns"
        android:drawableEnd="@drawable/ic_feedback"
        android:drawableTint="@color/color2"
        android:paddingEnd="8dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/backBtn2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>